Add logo and favicon links to organization data. Enclose description in quotes.

--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,12 @@ author:
 
 # Title of the window in the user's browser's
 title: Judicial Selections Across the US
-description: Judicial Selection processes for all 50 states and DC. Covers all three state court levels: State Supreme Court, Intermediate Appellate Courts and Trial Courts.
+description: "Judicial Selection processes for all 50 states and DC. Covers all three state court levels: State Supreme Court, Intermediate Appellate Courts and Trial Courts."
 organization:
   name: Brennan Center for Justice
   url: http://brennancenter.org
+  logo: /img/bcj_logo.png
+  favicon: http://www.brennancenter.org/sites/all/themes/bcj-zen/favicon.ico
 
 # Extra Software needed (that github-pages supports)
 gems:
