add some workflow scripts to build from raw javascripts.  Scripts are POSIX and expected to work in OSX and Linux (any Unix based system, really).  They will need to be adopted for DOS by someone.

--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "jquery": "^2.1.4",
     "postcss-cli": "^2.5.1",
     "uglify-js": "^2.4.24"
+  },
+  "scripts": {
+	  "clean": "touch js/cats.js && rm js/cats*.js",
+	  "concat": "npm run clean; cat js/dev/*.js > js/cats.js",
+	  "uglify": "npm run concat; uglifyjs -m -c -o js/cats.min.js js/cats.js"
   }
 }
