--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "uglify-js": "^2.4.24"
   },
   "scripts": {
-	  "clean": "touch js/cats.js && rm js/cats*.js",
+	  "clean": "touch js/cats.js && rm js/cats.js",
 	  "concat": "npm run clean; cat js/dev/*.js > js/cats.js",
 	  "uglify": "npm run concat; uglifyjs -m -c -o js/cats.min.js js/cats.js"
   }
