--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "1.0.0",
   "dependencies": {
     "d3": "^3.5.6",
+    "d3-queue": "^2.0.3",
+    "d3-tip": "^0.6.7",
     "hint.css": "^2.2.1",
     "lodash": "^3.10.1",
-    "queue-async": "^1.0.7",
     "topojson": "1"
   },
   "devDependencies": {
