--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "d3-queue": "^2.0.3",
     "d3-tip": "^0.6.7",
     "lodash": "^3.10.1",
-    "topojson": "1"
-    "balloon-css": "^0.2.4",
+    "topojson": "1",
+    "balloon-css": "^0.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.3",
