Add google analytics template which will get automatically enabled whenever a google analytics tracking id gets entered.

--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,8 @@ gems:
 # Google Analytics:
 #   - Note: please paste the entire token, starting with "UA-",
 analytics:
-  provider: google
   google:
-    tracking_id: 'UA-***'
+    tracking_id: '' # eg 'UA-***'
 
 # The _introduction directory contains the intro columns
 collections:
