--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ author:
   gihub: seemantk
 
 # Title of the window in the user's browser's
-title: Rethinking Judicial Selection
+title: Judicial Selection across the United States
 description: "Judicial Selection processes for all 50 states and DC. Covers all three state court levels: State Supreme Courts, Intermediate Appellate Courts and Trial Courts."
 organization:
   name: Brennan Center for Justice
