--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ organization:
   url: http://brennancenter.org
   logo: /img/bcj_logo.svg
   logo_caption: Go to the main Brennan Center for Justice website.
-  favicon: https://www.brennancenter.org/core/misc/favicon.ico
+  favicon: http://brennancenter.org/core/misc/favicon.ico
 
 # Extra Software needed (that github-pages supports)
 gems:
