zd6810 (Four Kitchens): use npm to get iframeResizer library

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "d3": "^3.5.6",
     "d3-queue": "^2.0.3",
     "d3-tip": "^0.6.7",
+    "iframe-resizer": "^4.3.2",
     "lodash": "^4.17.15",
     "topojson": "1"
   },
